argocd-apps/nodes/data/airbyte/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ingress
  namespace: airbyte
 # annotations:
 #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
 #   traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  #tls:
  #- hosts:
  #    - data-airbyte.ctmartin.me
  #  secretName: airbyte-tls
  rules:
  - host: data-airbyte.lab.ctmartin.me
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: airbyte-webapp-svc
            port:
              number: 80
  - host: data-airbyte.ctmartin.me
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: airbyte-webapp-svc
            port:
              number: 80
